# parallel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  az_tuecl-ud-test-14042025.conllu  az_tuecl-ud-test-21042025.conllu  az_tuecl-ud-test.se.conllu  conllu.py  count_tokens.py  crh_tuecl-ud-test.crh.conllu  kaa_tuecl-ud-test.conllu  kum_tuecl-ud-test.conllu  ky_tuecl-ud-test.bc.conllu  list_sentences.py  parallel_sentences_table.md  parse.py  pyproject.toml  run_validation.py  sah_tuecl-ud-test.si.conllu  sentence_list.md  tr_tuecl-ud-test.cc.conllu  tr_tuecl-ud-test.conllu  tr_tuecl-ud-test.fa.conllu  tt_tuecl-ud-test.ct.conllu  ud_corpus_uz.conllu  uz_tuecl-ud-test.aa.conllu  uz_tuecl-ud-test.conllu
.github/workflows/: lint.yml  validate.yml
analyses/: dependency_length.ipynb  edit_distance_parallel_corpus.ipynb  relative_clause_position.ipynb  subject_verb_agreement.ipynb  ud_treebank_analyzer.ipynb
data/: az_tuecl-ud-test.conllu  ky_tuecl-ud-test.bc.conllu  tt_tuecl-ud-test.ct.conllu  uz_tuecl-ud-test.conllu
little-prince/: extract.py  json_to_txt.py  sentences.json
scripts/: compare_with_published.py  conllu.py  list_sentences.py  tabulate_parallel_sentences.py  validate_parallel.py
