[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ud-turkic-parallel"
version = "0.1.0"
description = "UD Turkic parallel treebanks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Furkan", email = "furkan.akkurt@bogazici.edu.tr" }]
dependencies = [
    "ud-tools",
    "nltk",
]
